--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Logo_North.svg" alt="NorthLedger Logo"/>
+      <img src="Assets/NL-Logo.png" alt="NorthLedger Logo" style="height: 60px;">
       <h1>NorthLedger</h1>
     </div>
     <p>Modern Bookkeeping & Accounting for Canadian Small Businesses</p>
