--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 </head>
 
 <body>
-  <header>
-    <div class="logo">
-      <img src="Assets/NL-Logo.png" alt="NorthLedger Logo" style="height: 60px;">
-      <h1>NorthLedger</h1>
+  <header style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 50px 20px; background-color: #f9f9f9;">
+    <div class="logo" style="display: flex; flex-direction: column; align-items: center;">
+      <img src="Assets/NL-Logo.png" alt="NorthLedger Logo" style="height: 120px; margin-bottom: 20px;">
+      <h1 style="font-size: 2.5rem; margin: 10px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #222;">NorthLedger</h1>
+      <p style="font-size: 1.2rem; color: #555;">Modern Bookkeeping & Accounting for Canadian Small Businesses</p>
     </div>
-    <p>Modern Bookkeeping & Accounting for Canadian Small Businesses</p>
   </header>
 
   <section class="center">
