--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
   <header>
     <div class="logo" style="text-align: center;">
-      <img src="Assets/NL-Logo.png" alt="NorthLedger Logo" style="height: 120px;">
+      <img src="Assets/NL-Logo.png" alt="NorthLedger Logo" style="height: 140px;">
     </div>
     <p style="text-align: center;">Modern Bookkeeping & Accounting for Canadian Small Businesses</p>
   </header>
@@ -130,7 +130,13 @@
   </section>
 
   <footer>
-    <h3>NorthLedger Bookkeeping & Accounting</h3>
+    <p>Connect with us:</p>
+    <a href="https://www.facebook.com/people/North-Ledger/61578771422972/" target="_blank" style="margin: 0 10px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook" width="24" height="24">
+    </a>
+    <a href="https://www.facebook.com/people/North-Ledger/61578771422972/" target="_blank" style="margin: 0 10px;">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="24" height="24">
+    </a>
     <div class="contact-info">
       <p>📍 Ottawa, ON (Serving All of Canada)</p>
       <p>📧 <a style="color: white;" href="mailto:info@northledger.ca">info@northledger.ca</a></p>
