fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <a href="https://www.facebook.com/people/North-Ledger/61578771422972/" target="_blank" style="margin: 0 10px;">
       <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook" width="24" height="24">
     </a>
-    <a href="https://www.facebook.com/people/North-Ledger/61578771422972/" target="_blank" style="margin: 0 10px;">
+    <a href="https://www.linkedin.com/company/north-ledger/?viewAsMember=true" target="_blank" style="margin: 0 10px;">
       <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="24" height="24">
     </a>
     <div class="contact-info">
