New and improved website

--- a/index.html
+++ b/index.html
@@ -79,54 +79,133 @@
     <p style="text-align: center;">Modern Bookkeeping & Accounting for Canadian Small Businesses</p>
   </header>
 
+  <style>
+    .navbar {
+      background-color: #0a2540; /* Matches header */
+      padding: 15px 0;
+      text-align: center;
+      border-radius: 10px;
+      margin: 20px auto;
+      max-width: 90%;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+  
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: 600;
+      margin: 0 20px;
+      font-size: 18px;
+      transition: color 0.3s ease;
+    }
+  
+    .navbar a:hover {
+      color: #aad8ff; /* Lighter blue on hover */
+    }
+  </style>
+  
+  <div class="navbar">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="blog.html">Blog</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
+  </div>
+  
+
   <section class="center">
     <h2>Stress-Free Bookkeeping & Tax Services</h2>
     <p>Most small businesses struggle with their books. NorthLedger uses QuickBooks Online to streamline your finances, so you can focus on what matters most—growing your business.</p>
-    <a class="btn" href="https://calendly.com/moiz-abbasi1017/30min" target="_blank">Book Your Free Consultation</a>
+    <a class="btn" href="https://calendly.com/north-ledger1/30min" target="_blank">Book Your Free Consultation</a>
   </section>
 
-  <section class="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>✔️ Bookkeeping Services (Monthly, Quarterly, or Annual)</li>
-      <li>✔️ QuickBooks Online Setup & Training</li>
-      <li>✔️ Bank & Credit Card Reconciliations</li>
-      <li>✔️ Payroll Setup & Remittance (CRA)</li>
-      <li>✔️ HST/GST Filing</li>
-      <li>✔️ Tax Preparation & CRA Compliance</li>
-      <li>✔️ Catch-Up Bookkeeping (Cleanup)</li>
-      <li>✔️ Financial Reporting & Dashboard Insights</li>
-      <li>✔️ Budgeting, Forecasting & Financial Strategy</li>
-      <li>✔️ Small Business Incorporation Guidance</li>
-    </ul>
+  <section style="padding: 40px 20px; background-color: #f9f9f9; text-align: center;">
+    <h2 style="font-size: 32px; margin-bottom: 40px; color: #2b3a42;">Our Services</h2>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; max-width: 1200px; margin: 0 auto;">
+      
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">Bookkeeping Services</h3>
+        <p>Monthly, quarterly, or annual bookkeeping to keep your finances in order and tax-ready.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">QuickBooks Setup & Training</h3>
+        <p>Set up QuickBooks Online and receive training tailored to your business needs.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">Payroll & CRA Remittance</h3>
+        <p>Full payroll support and remittance filing to ensure timely and accurate submissions.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">Tax Prep & CRA Compliance</h3>
+        <p>Year-end support including tax preparation, HST/GST filings, and CRA compliance.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">Financial Reporting & Strategy</h3>
+        <p>Custom dashboards, financial forecasting, and insights to guide your business growth.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+      <div style="flex: 1 1 300px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px;">
+        <h3 style="color: #0b5c91;">Virtual CFO Services</h3>
+        <p>Get executive-level financial leadership without the full-time cost. Strategic, affordable support.</p>
+        <a href="services.html" style="color: #0b5c91; text-decoration: none; font-weight: bold;">Learn More →</a>
+      </div>
+  
+    </div>
+  </section>
+  
+  <section id="who-we-work-with" style="padding: 60px 20px; background-color: #ffffff;">
+    <div class="container" style="max-width: 900px; margin: 0 auto; text-align: center;">
+      <h2 style="font-size: 2rem; margin-bottom: 20px; color: #333;">Who We Work With</h2>
+      <p style="font-size: 1.1rem; color: #555; line-height: 1.6;">
+        We specialize in supporting:
+      </p>
+      <ul style="list-style: none; padding: 0; margin-top: 30px;">
+        <li style="margin-bottom: 15px; font-size: 1.1rem; color: #333;">
+          <strong>Contractors & Self-Employed Professionals</strong>
+        </li>
+        <li style="margin-bottom: 15px; font-size: 1.1rem; color: #333;">
+          <strong>Small & Medium-Sized Enterprises</strong>
+        </li>
+        <li style="margin-bottom: 15px; font-size: 1.1rem; color: #333;">
+          <strong>Professional Services Firms</strong>
+        </li>
+        <li style="margin-bottom: 15px; font-size: 1.1rem; color: #333;">
+          <strong>E-commerce & Retail Businesses</strong>
+        </li>
+        <li style="margin-bottom: 15px; font-size: 1.1rem; color: #333;">
+          <strong>Nonprofits & Associations</strong>
+        </li>
+      </ul>
+    </div>
   </section>
 
-  <section>
-    <h2>Who We Work With</h2>
-    <p>We specialize in supporting:</p>
-    <ul>
-      <li>🧑‍🔧 Contractors & Freelancers</li>
-      <li>👨‍⚕️ Medical & Dental Practices</li>
-      <li>🏢 Consultants & Tech Startups</li>
-      <li>🏗️ Trades, Renovators & Real Estate Investors</li>
-      <li>🛍️ Online Businesses & Creators</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Why Choose NorthLedger?</h2>
-    <p>We combine decades of accounting, finance, and software engineering experience to deliver efficient, tech-driven financial solutions. Our mission is simple: eliminate paperwork and give you clarity through clean books and proactive advice.</p>
-  </section>
-
-  <section>
-    <h2>Serving Clients Across Canada</h2>
-    <p>Located in Ottawa, we serve clients nationwide. Whether you're just starting or scaling, NorthLedger is here to support your growth with reliable cloud-based bookkeeping and tax services.</p>
+  <section id="about-us" style="padding: 60px 20px; background-color: #f9f9f9;">
+    <div class="container" style="max-width: 900px; margin: 0 auto; text-align: center;">
+      <h2 style="font-size: 2rem; margin-bottom: 20px; color: #333;">About NorthLedger</h2>
+      <p style="font-size: 1.1rem; color: #555; line-height: 1.6;">
+        Our founder, <strong>Mujeeb Abbasi</strong>, has over 30 years of financial and accounting experience working with international companies across diverse industries. For the last 15 years, he has been dedicated to serving Canadian businesses and clients with personalized, reliable financial expertise.
+      </p>
+      <a href="about.html" style="display: inline-block; margin-top: 15px; padding: 10px 20px; background-color: #0a2540; color: #fff; text-decoration: none; border-radius: 4px;">
+        Read More
+      </a>
+    </div>
   </section>
 
   <section class="center">
     <h2>Start with a Free Consultation</h2>
     <p>Let’s chat about how NorthLedger can simplify your accounting and save you time.</p>
-    <a class="btn" href="https://calendly.com/moiz-abbasi1017/30min" target="_blank">Schedule a Call</a>
+    <a class="btn" href="https://calendly.com/north-ledger1/30min" target="_blank">Schedule a Call</a>
   </section>
 
   <footer>
@@ -140,7 +219,7 @@
     <div class="contact-info">
       <p>📍 Ottawa, ON (Serving All of Canada)</p>
       <p>📧 <a style="color: white;" href="mailto:info@northledger.ca">info@northledger.ca</a></p>
-      <p>📞 613-879-9696</p>
+      <p>📞 613-706-5648</p>
     </div>
     <p>&copy; 2025 NorthLedger. All rights reserved.</p>
   </footer>
